@@ -1,4 +1,4 @@
 DIST mailspring-1.6.3-amd64.deb 89278190 BLAKE2B 516da3e483ff28292393afe3730a320b6b0e8ab3109801f93d3140d98862b94f978cfdce087808d79abb2d70309849262d1fbb832f7a3e76bcc5aeb4503472bc SHA512 39a6f981b19905c24798da61c8d43ca331ea90a7a18df9f927d7ea274553f929358792538e1e79baf04e29c09dc9900db5eddf9e8cf6229570aed8d1c89010a7
-EBUILD mailspring-bin-1.6.3.ebuild 2000 BLAKE2B 47ea129b0ffd4c38242605596e5670ea9ece1f8e290d24437e6d7573f0d3b3b81f7539d6a005e085ba868364c041e7e155b291232e9e705afa98c748bffe6446 SHA512 b58155e341463f8b86ed937ca01e0375d3c9c67d25c2b3134a11646c6fd01eaa2507968947814fa6959d0c79a2c532e4cf5a7441736f6ed55853758075711196
-MISC ChangeLog 172 BLAKE2B afdbfb76dd571e9e0188fa7752dd4070b0f9836a0cdf6863d94f5134acc00985f502fc92aba55475c31fc0f9985744190d7099b06fe63ae83f999c3dc8476c10 SHA512 463fc161b12d8350937d37e996d199c0719c430af3cfc3468e2e1dd0394bac1fdd643352804e96f9389259be38c0a370c1ccf51eb8a2550c486cf34c4eafe1bb
+EBUILD mailspring-bin-1.6.3.ebuild 2123 BLAKE2B 750addb8148805ded43efc5b8c6450b68eaf59e142a1bd821759fd2072b13895b3af3681a0fe4191ea536029e73e9bbf67965650d9ce314c7a0d0925ddb1e39a SHA512 43cb319170bf5576fc521a13a46d28ff6ef28463e63e84d74cbe422db59349dfb1e6ffd51c24b747dd73236a64d829f5533a9ac14f7dcad75052070cedf6e6ef
+MISC ChangeLog 286 BLAKE2B e9ddd0001ac32df2fce931b29e2e8f267ed1082fa0afd57b2692593efd43262b8579e8b81491511d7b4491aaa5ac6a99e7ded3c4e372f874e9c6fa241f24a2a0 SHA512 2d5a493d1aa07082c71b9ef42bbed71f1b90de58525e0c6c876babc7aa661d90588c6e3e260621c80efb91e7327d76fdf11aa305ae13f0b5389e988680407fc1
 MISC metadata.xml 638 BLAKE2B e9ddf3d72d02c04983baabdba8d6b73ecba63bbcc4a875528a9df78986b36c02acd7d76d5701b9fc43fe42faa8bdd4cdd0bc8a16d8a0e2ca01e69ab48d33c845 SHA512 84be5191a721aae0502dfce7bda2fd0b5a2cec2e90d1e3efa741110cf4f8aac579288498dbf4f3bef07b4aa37e9bfcfe3ec2be97fed7bf26cceef9de2ef13ebf
